--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Mahasiswa.jar
+dist.jar=${dist.dir}/AppMahasiswa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Mahasiswa
+dist.jlink.output=${dist.jlink.dir}/AppMahasiswa
 excludes=
-file.reference.mysql-connector-java-8.0.17.jar=C:\\Users\\Camomile\\Downloads\\jar_files\\mysql-connector-java-8.0.17.jar
+file.reference.mysql-connector-java-8.0.17.jar=../../../Downloads/jar_files/mysql-connector-java-8.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Mahasiswa
+jlink.launcher.name=AppMahasiswa
 main.class=mahasiswa.Mahasiswa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
